tests/baselines/reference/blockScopedFunctionDeclarationStrictES6.errors.txt
tests/cases/compiler/blockScopedFunctionDeclarationStrictES6.ts(6,1): error TS2552: Cannot find name 'foo'. Did you mean 'JSON'?


==== tests/cases/compiler/blockScopedFunctionDeclarationStrictES6.ts (1 errors) ====
    "use strict";
    if (true) {
        function foo() { } // Allowed to declare block scope function
        foo(); // This call should be ok
    }
    foo(); // Cannot find name since foo is block scoped
    ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'JSON'?